# win-iconv

./: CMakeLists.txt  ChangeLog  Makefile  ProjectHome.md  iconv.def  iconv.h  localcharset.h  readme.txt  win_iconv.c  win_iconv_test.c
tags/0.0.2/: win_iconv.c
tags/0.0.3/: CMakeLists.txt  win_iconv_test.c
tags/0.0.3/trunk/: ChangeLog
tags/0.0.4/: iconv.def  win_iconv.c
tags/0.0.6/: Makefile  win_iconv_test.c
trunk/: CMakeLists.txt  ChangeLog  Makefile  win_iconv.c  win_iconv_test.c
